--- a/.build/arm64-apple-macosx/debug/Citman.dSYM/Contents/Info.plist
+++ b/.build/arm64-apple-macosx/debug/Citman.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.Citman</string>
+		<string>com.apple.xcode.dsym.com.example.Citman</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
