--- a/Sources/Citman/Info.plist
+++ b/Sources/Citman/Info.plist
@@ -20,5 +20,41 @@
     <string>14.0</string>
     <key>NSHighResolutionCapable</key>
     <true/>
+    <key>CFBundleDocumentTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeName</key>
+            <string>BibTeX</string>
+            <key>LSHandlerRank</key>
+            <string>Owner</string>
+            <key>LSItemContentTypes</key>
+            <array>
+                <string>org.tug.tex.bibtex</string>
+                <string>public.plain-text</string>
+                <string>public.text</string>
+            </array>
+        </dict>
+    </array>
+    <key>UTExportedTypeDeclarations</key>
+    <array>
+        <dict>
+            <key>UTTypeConformsTo</key>
+            <array>
+                <string>public.plain-text</string>
+                <string>public.text</string>
+            </array>
+            <key>UTTypeDescription</key>
+            <string>BibTeX Bibliography</string>
+            <key>UTTypeIdentifier</key>
+            <string>org.tug.tex.bibtex</string>
+            <key>UTTypeTagSpecification</key>
+            <dict>
+                <key>public.filename-extension</key>
+                <array>
+                    <string>bib</string>
+                </array>
+            </dict>
+        </dict>
+    </array>
 </dict>
 </plist>
